# tinykvm_lib_sandbox

./: .gitignore  CMakeLists.txt  notes.md
.cache/clangd/index/: amd64.hpp.5CAE43389293EE47.idx  amd64.hpp.7BF6B38FA553E793.idx  assert.hpp.3DC3C9215FC4FFF9.idx  assert.hpp.E0F2B76161DDEC67.idx  bench.cpp.EE0E6F6FD05C8588.idx  common.hpp.BA7E184520BA8DE4.idx  common.hpp.CED23A74A4BEDD32.idx  elf.h.39359E75298C7438.idx  elf.h.8B2AA1B7974E4C7A.idx  elf.hpp.7CF5163F8E34F576.idx  elf.hpp.F5FB3BA460966721.idx  fds.cpp.9496FD4B34BB804B.idx  fds.cpp.A8220213C3DC3330.idx  fds.hpp.0B09413C699BEB50.idx  fds.hpp.22B81EDDB9630D96.idx  forward.hpp.39CBAE5303BB93E9.idx  forward.hpp.F699EAFA20FD5B11.idx  gdt.cpp.5BC912E57BEA8C9A.idx  gdt.cpp.89AB3909221FB342.idx  gdt.hpp.5546EF5CEACAE26B.idx  gdt.hpp.A7E92D88BFF19B90.idx  hello_shm.c.0288DA881F0E74A2.idx  idt.cpp.028CB91E787D80B1.idx  idt.cpp.59D970CBE822EDC4.idx  idt.hpp.7A9BD2178810A1F9.idx  idt.hpp.F82ED0F5B30C0D58.idx  kernel_assembly.h.A0033EF0F160DAAA.idx  kernel_assembly.h.FEFE832EAC692AA6.idx  lapic.hpp.169D3F164BBC40BB.idx  lapic.hpp.8659DAA529DA724E.idx  load_file.hpp.23F270C20B9371B8.idx  load_file.hpp.A6CA6BD9271CEEBF.idx  machine.cpp.5C45B4EDE42C5977.idx  machine.cpp.66DED0A8E6CC5081.idx  machine.hpp.EB1ED1C9ED06E72D.idx  machine.hpp.F221D65B703A037E.idx  (+87 more)
lib/tinykvm/: machine.hpp  machine_elf.cpp  machine_inline.hpp  memory.cpp
logs/: kvm-hello.txt  kvm-img_app.txt  native-hello.txt  native-img_app.txt  plan.md
src/: assert.hpp  hello_shm.c  load_file.hpp  sandbox.cpp  sandbox.hpp  shm.cpp  shm_lib.c  simple.cpp
(+1 files in other folders)
